@startuml

class Calendar {
  -unique_id: int  
  -task_amount: int
  -event_amount: int
  +add_task(unique_id: int, name: String, description: String, due_date: Date, priority: String, status: String): void
  +remove_task(task_id): void
  +edit_task(event_id): void
  +add_event(unique_id: int, name: String, description: String, start_time: Date, end_time: Date, location: String): void
  +remove_event(param: event_id): void
  +edit_event(param: event_id): void
  +get_tasks_by_date(date: Date): List <Task>
  +get_tasks_by_name(string: Name): List <Task>
  +get_events_by_date(): list <Event>
  +get_events_by_name(): list <Event>
  +get_events_by_location(): list <Event>
  +set_task_num(int): void
  +set_event_num(int): void
  +get_task_num(): int
  +get_event_num(): int
}

class Task {
}

class Event {
}

class Daily_Overview {
}

Calendar "1" *-- "0 *" Task : "has"
Calendar "1" *-- "0 *" Event : "has"
Calendar "1" o-- "1" Daily_Overview : "generates"

@enduml
